[package]
name = "cbc"
version = "0.0.1"
edition = "2021"

[dependencies]

[workspace]
members = [
    "./crates/*"
]

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

